--- a/AIDLClient/app/src/main/res/layout/activity_demo3.xml
+++ b/AIDLClient/app/src/main/res/layout/activity_demo3.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -8,5 +9,45 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ljd.aidl.activity.Demo3Activity">
+    <Button
+        android:id="@+id/bind_demo3_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="bind service"/>
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/unbind_demo3_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="unbind service"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/test_demo3_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="test"/>
+
+        <Button
+            android:id="@+id/clear_demo3_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="clear"/>
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:id="@+id/show_demo3_linear"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
